--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -1,5 +1,6 @@
 ---
 id: wallets
+title: Wallets
 hide_title: true
 sidebar_label: Overview
 slug: /wallets
@@ -9,68 +10,199 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/wallets/header.png')} />
 
-# Helium Wallets
+## Helium Is Moving To Solana
 
-In blockchain projects, various wallet applications exist to help users manage their own private
-keys, enabling them to sign transactions and transfer assets.
+All Hotspots on the Helium Network with an animal name will automatically become a
+[Solana NFT](https://solana.com/developers/nfts), visible in the
+[Helium Wallet app](/wallets/helium-wallet-app), and maintained by the Hotspot
+[Maker apps](/mine-hnt/maker-apps).
 
-For the Helium Network, a wallet maintains ownership of Hotspots themselves, the Helium Network
-Tokens (HNT), and/or Data Credits (DC).
+As part of the Helium migration to Solana, there are some changes to existing Helium Wallets.
 
-Depending on your situation, one of the wallets here may be the best fit.
+The sections below provide more information for the different Wallets and what can be expected as
+part of the migration.
 
-## Helium Wallet App
+## Hotspots on Solana
 
-In February 2022, the Helium Core Team announced the future of Helium Apps - splitting the existing
-[Helium Hotspot app](/wallets/app-wallet) into its two functional components; managing Hotspots and
-managing Tokens.
+Hotspots will also move to the new Solana blockchain, specifically performing off-chain
+Proof-of-Coverage. More information on off-chain PoC can be found in
+[HIP-70](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md#implementing-proof-of-coverage-oracles).
 
-The Helium Wallet App is a single App to manage your Tokens and identity on the Helium Network!
+Makers will push a fleet-wide update to all their Hotspots that switches a Hotspot from receiving
+Challenges from Validators to automatically beaconing by themselves every 6 hours and sending
+results to an Off-Chain Oracle.
 
-Some notable features:
+Makers must push this mandatory update to their fleet of Hotspots. Failure to do so will mean their
+customers cease to mine and stop earning rewards once the migration is complete.
 
-- Multiple Account Support
-- Ledger Balance
-- Address Book
-- Verify your Helium Identity
-- Helium Vote
-- Multiple Recipient Payment Support
+### Hotspots Will Being To Earn IOT
 
-## Command Line Interface Wallet
+Hotspot Owners will start earning IOT as the migration will launch the IOT subDAO. To view IOT
+earned by your Hotspot, use the [Helium Wallet app](/wallets/helium-wallet-app). 5G Hotspot Owners
+will continue earning MOBILE and will additionally begin to earn IOT.
 
-The Helium Command Line Interface (CLI) wallet is the most flexible but it also requires more
-technical knowledge. As such, it is suitable for all types of transactions, but requires more
-caution on behalf of its users.
+:::note 5G Hotspot Owners
 
-Learn more about usage [here](/wallets/cli-wallet). Source code is available on
-[Github](https://github.com/helium/helium-wallet-rs).
-
-## Ledger Wallet
-
-The Helium Ledger Wallet is an application that runs on the Ledger Hardware wallet. The Ledger
-Hardware wallet is the most secure way to send and receive the Helium Network Token (HNT), but
-currently supports no other transactions.
-
-Learn more about usage [here](/wallets/ledger). Source code is available on
-[Github](https://github.com/helium/helium-ledger-cli).
-
-## Helium Hotspot App
-
-:::important Sunsetting Features
-
-Wallet-related functionality in the Helium Hotspot app will be sunsetted over the coming months.
-More information on the [Helium Hotspot App](/wallets/app-wallet)
+Your 5G Hotspot will become an NFT, and your CBRS Radios will remain with a serial number, just like
+before the Solana transition.
 
 :::
 
-## 12-Word and 24-Word Seed Phrases
+### Hotspots Become NFTs
 
-When a Helium Wallet is created with the Helium Wallet App or Helium Hotspot App, a 12-word or
-24-word "Seed Phrase" is generated.
+Account migration is required to view your Hotspot as NFT in the
+[Helium Wallet app](/wallets/helium-wallet-app).
+
+<div class="container" style={{ marginBottom: 20 }}>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6 img-center">
+      <b>Hotspot view in the Hotspot App</b>
+    </div>
+    <div class="col col--6 img-center">
+      <b>Hotspot as NFT in [Helium Wallet app](/wallets/helium-wallet-app)</b>
+    </div>
+  </div>
+  <div class="row" style={{ marginBottom: 20 }}>
+    <div class="col col--6 img-center">
+      <img className="appscreen" src={useBaseUrl('img/wallets/hotspot-app.png')} />
+    </div>
+    <div class="col col--6 img-center">
+      <img className="appscreen" src={useBaseUrl('img/wallets/hotspot-as-nft.png')} />
+    </div>
+  </div>
+</div>
+
+---
+
+## Sunsetting the Helium App
+
+> Some users may know the [Helium app](/wallets/app-wallet) as the "Helium Hotspot App" or "the blue
+> app."
+
+The existing [Helium Hotspot app](/wallets/app-wallet) will be restricted to only management of
+Original Helium Hotspots in two phases.
+
+**Phase 1:**
+
+> ETA December 19, 2022
+
+- Hotspot App users will be migrated to use the [Helium Wallet app](/wallets/helium-wallet-app) for
+  Helium Wallet management.
+- New Hotspots will no longer be able to be onboarded using the Helium App, and will instead to app
+  stores, dashboards, or their email support.
+- Hotspot management for _existing_ Hotspots still available in the Hotspot App.
+- The `transfer_hotspot` and `assert_location` will use the Helium Wallet app for signatures.
+
+**Phase 2:**
+
+> ETA January 2023
+
+- Hotspot management will be handled by Maker apps.
+- Original Helium Hotspots will be managed by the Helium App.
+- All remaining wallet functionality will use the Helium Wallet app.
+
+:::note What If I Miss The Migration Deadline?
+
+Users that do not transition to the Helium Wallet app prior to the Solana migration will still be
+able to access their seed phrase and transition to the Helium Wallet app but will not be able to
+submit transactions in the Helium app.
+
+:::
+
+### Maker Apps
+
+Makers will need to update their [Maker Apps](/mine-hnt/maker-apps#known-maker-apps) to use the new
+Solana transaction type to add Hotspots to the network, assert location, and transfer Hotspots.
+
+The core team will make this update available to Makers in an SDK update weeks before the chain halt
+to allow Makers time to make the update, release the app to the app store, and available to Hotspot
+owners.
+
+The minimum app version will change with each Maker - please check with them for exact details.
+
+:::note Maker Updates
+
+Note that Makers that do not update their Maker apps will mean their customers will not be able to
+add new Hotspots to the network, transfer existing Hotspots, or assert locations.
+
+:::
+
+## Wallet Migration Guides
+
+As part of the migration to Solana, all Helium Wallets will need to be migrated to the Solana
+blockchain. What this means for each Helium Wallet type is explained below.
+
+### For Helium App Users
+
+The [Helium app](/wallets/app-wallet) will require a migration to the
+[Helium Wallet app](/wallets/helium-wallet-app). Migration is necessary to interact with your HNT,
+DC, MOBILE, IOT, and Hotspots.
+
+To start, ensure your [Helium app](/wallets/app-wallet) is updated and that you have downloaded the
+latest Helium Wallet app.
+
+1. Open the [Helium app](/wallets/app-wallet) (minimum v4.3.0)
+2. Tap `Export 12 Word Seed Phrase` in the migration popup
+3. The [Helium Wallet app](/wallets/helium-wallet-app) will automatically open. Tap `Import`
+4. Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Solana Blockchain.
+
+You will use the [Helium Wallet app](/wallets/helium-wallet-app) moving forward. You will locate
+Hotspot NFTs in the NFT Collectibles section, and token balances are visible on the account page.
+You can also create multiple accounts in the [Helium Wallet app](/wallets/helium-wallet-app).
+
+Your public wallet address will change, but your private key and 12-word seed phrase will remain the
+same.
+
+### For Helium Wallet App Users
+
+> Some users may know the [Helium Wallet app](/wallets/helium-wallet-app) as the "New Wallet app" or
+> "the black app."
+
+To migrate to Solana, simply update your [Helium Wallet app](/wallets/helium-wallet-app) version to
+2.0.0 or newer. That’s it!
+
+If you have Hotspots in any account, they will appear as an NFT Collectable. All other tokens and
+their balances are automatically transferred to the Solana Blockchain under the same token name.
+
+Your public wallet address will change, but your private key and seed phrase (12 or 24 word) will
+remain the same.
+
+### For Ledger Wallet Users
+
+Ledger users will need to update their Helium Ledger App to a version that's pending release. This
+upcoming version will use the Solana private key derivation path that moves all your tokens and
+balances over to Solana. You may need to uninstall any Solana Ledger Apps during the migration
+process.
+
+Your public key will change on Solana and the private key will also need to be updated.
+
+### For CLI Wallet Users
+
+:::caution
+
+The CLI wallet will be completely deprecated except for exporting private seed phrases and
+displaying public Solana addresses.
+
+:::
+
+The CLI Wallet will have its feature set pared down as there are many other Solana-compatible CLI
+Wallets. The existing Helium CLI Wallet will be reduced to the following two functions:
+
+1. Export Seed Phrase to import into a Solana CLI Wallet (or the
+   [Helium Wallet app](/wallets/helium-wallet-app))
+2. Display Solana Public Address (for a given set of private keys)
+
+This means common payment transactions and staking should utilize Solana CLI Wallet or the Helium
+Wallet app.
+
+## 12-Word And 24-Word Seed Phrases
+
+When a Helium Wallet is created with the [Helium Wallet app](/wallets/helium-wallet-app) or Helium
+Hotspot App, a 12-word or 24-word "Seed Phrase" is generated.
 
 Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
-while the Helium Wallet App accepts 12-word seed phrases, all new wallets are created with 24-word
-seed phrases.
+while the [Helium Wallet app](/wallets/helium-wallet-app) accepts 12-word seed phrases, all new
+wallets are created with 24-word seed phrases.
 
 Read more about Helium 12-word and 24-word here:
 
