moved context section

--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -13,6 +13,15 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 The Helium Wallet app is the new trusted way to manage your tokens and identity on the Helium
 Blockchain. This new Wallet App is not meant to manage Hotspots or Validators.
 
+Some notable features:
+
+- Multiple Account Support
+- Ledger Balance
+- Address Book
+- Verify your Helium Identity
+- Helium Vote
+- Multiple Recipient Payment Support
+
 All Hotspot Management (diagnostics, asserting location, adding Hotspots, etc) should be done via
 the [Maker Apps](/mine-hnt/maker-apps) available from the manufacturer.
 
