--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -158,7 +158,7 @@ the 6-month lock-up as a reward for ongoing staking in the Network.
 
 ### Where Does My HNT Go if I Stake veHNT?
 
-If you stake your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
+If you lock-up your HNT for veHNT, your HNT will become veHNT and remain entirely in your wallet's
 custody. At the end of the lock-up period, you will receive HNT back to your wallet 1:1 for the HNT
 you staked.
 
@@ -167,7 +167,7 @@ you staked.
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
 You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 6
-and 48 months with block granularity.
+and 48 months selectable in days but with block granularity.
 
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
@@ -177,8 +177,8 @@ with shorter-term interests in the governance of the Network.
 Voting power is the weight of your vote towards decisions made by the DAO or subDAO. The more veHNT
 you have, the more weight your vote has.
 
-You can only increase your voting power by staking more HNT or extending an existing veHNT stake for
-longer.
+You can only increase your voting power by staking more HNT or extending an existing veHNT lock-up 
+period for longer.
 
 ### How to Choose a subDAO to Stake?
 
@@ -198,11 +198,13 @@ amount of net subDAO token earnings as delegators share the 6% subDAO token emis
 
 ### How Will Staking Work By Using veHNT?
 
-Anyone can stake any amount of HNT for six months to four years. You choose your unstaking date at
-the time of lock-up. The HNT staked is exchanged for veHNT, which provides two benefits:
+Anyone can stake any amount of HNT and lock it up for six months to four years. You choose your 
+unstaking date at the time of lock-up or deciding to keep it on a rolling lock-up period before 
+initiating the start or the veHNT decay process . The HNT staked is exchanged for veHNT, which 
+provides two benefits:
 
 - Voting in the Helium DAO on new subDAO proposals.
-- Participating in the Governance of the HNT DAO.
+- Participating in the Governance of the Helium DAO.
 
 Anyone can delegate veHNT to a subDAO, one component of a subDAO's Utility Score. Delegating veHNT
 to a subDAO allows the holder to earn subDAO token rewards proportionally based on the subDAOs
@@ -217,8 +219,8 @@ an exchange of 1:100 HNT to veHNT. Any period in between will be treated on a li
 to 100.
 
 > For example, I choose to lock-up 10 HNT for six months. I receive 10 veHNT. If I decide to unstake
-> immediately, after six months, my veHNT decays until my 10 HNT unlocks and is available to me for
-> use in my wallet.
+> immediately, after six months, my veHNT decays to 0 until my 10 HNT unlocks and is available to me 
+> for use in my wallet.
 
 ### How Can I Obtain veHNT?
 
@@ -232,17 +234,21 @@ Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms t
 
 ### Is There a Staking "Genesis" Period?
 
-For the first seven days, there will be a 3x bonus for new veHNT stakers.
+For the first seven days after the Solana transition, there will be a 3x bonus for new veHNT stakers.
 
 Only during the seven-day "Genesis" period do new stakers receive 3x the veHNT they would normally
 receive for staking.
 
-> For example: Staking 10 HNT for six months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT
+For example:
+> Staking 10 HNT for six months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT
 > at the end of the staking period, and 10 HNT is returned to the wallet.
 
-Staking 20 HNT for 24 months returns 2598 veHNT (20x43.3x3), and these decay to 60 veHNT at six
-months and then decay slower to 0 veHNT at the end of the last month of the staking period, and 20
-HNT is returned to the wallet.
+> Staking 20 HNT for 24 months returns 2598 veHNT (20x43.3x3), and these decay to 0 veHNT at the end
+> of the staking period, and 20 HNT is returned to the wallet.
+
+Validator owners can also take advantage of the 7 day bonus period and get the 3x bonus applied 
+if they extend their default 6 month lock-up period. This 3x bonus will be removed if they extend 
+the lock-up further after the initial seven days.
 
 ### Will I Earn HNT by Staking For veHNT?
 
@@ -253,20 +259,24 @@ However, when you stake HNT into veHNT, you can delegate your veHNT into one or 
 as IOT or MOBILE), and the subDAOs allocate up to 6% of their token emissions to the veHNT owners
 delegating to that subDAO.
 
-> For example: When you delegate your veHNT to the IOT subDAO, you receive IOT every epoch directly
-> into your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO treasury for
-> HNT, or you may hold your IOT tokens.
+> For example: When you delegate your veHNT to the IOT subDAO, you receive IOT every epoch that is
+> claimable in your Helium Wallet. If you choose, this IOT can then be burned at the IOT subDAO treasury
+> for HNT, or you may hold your IOT tokens.
 
 ### How Do I Stake for veHNT After HIP-51 and HIP-70 Are Implemented?
 
 1. If you do not already have HNT in your Helium Wallet, transfer HNT into your Helium Wallet to
-   stake.
-2. Using the Helium Wallet App/Realms, stake HNT into veHNT and define the lock-up period. The
-   granularity of selection will likely be in blocks.
+   stake. 
+2. Using the Helium Wallet App/Realms, stake HNT into veHNT and define the lock-up period and if
+   the decay countdown period starts immediately or lock-up period is rolling with a decay countdown
+   starting at a future date to be decided (default)
+   The granularity of selection of lock-up period is initially in days.
 3. Using the Helium Wallet App/Realms, delegate that veHNT into one or more existing subDAOs. You
-   may have to complete several transactions depending on how many subDAOs you delegate to.
+   may have to complete several transactions depending on how many subDAOs you delegate to, or
+   if you want different amounts delegated for different lock-up periods.
 4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT
    earnings in the subDAO's treasury per epoch.
+5. There is a week long cooling off period before removal or changes to delegations can be made.
 
 This process should be simple in the [Helium Wallet App](/wallets/helium-wallet-app). More
 instructions will be provided on Realms usage as we get closer to the Solana migration.
@@ -282,41 +292,22 @@ will be performed within a Solana-compatible Wallet App/Realms or the
 - Voting for subDAO governance
 - Receiving the subDAO token that your veHNT is delegated into
 
-### Do I Have to Delegate My veHNT to a subDAO?
+### How much veHNT will I get for each lock-up period?
 
-No. You can hold your veHNT as is or delegate to a subDAO at any time.
+The table below shows the approximate HNT to veHNT multiplier for each month of starting a stake.
 
-:::note
+This value is multiplied by 3x during the first 7 days after the Solana transition.
 
-Once you delegate veHNT, you cannot un-delegate. Instead, you must wait for the lock-up period to
-end.
+N/A = Not applicable. There is a minium period of 6 months lock-up.
 
-:::
 
-### How Granular Is The veHNT Linear Decrease?
-
-veHNT quantity decay is granulated per epoch, and the veHNT delegated to a subDAO decays at the same
-rate.
-
-A 48-month lock-in period has approximately 60,480 linear steps between 100 veHNT and one veHNT.
-
-> 42 (48-6 months) x 30 (days) x 48 epochs (30 mins) = 60,480 linear steps
-
-After one epoch has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
-wallet will decay from 100 veHNT to 99.998347 veHNT. This decrease will recur every 30 minutes over
-the 42 months until it reaches one veHNT and remains at one veHNT for six months.
-
-The table below shows the approximate HNT to veHNT multiplier for each month of starting a stake or
-veHNT a stake has decayed. Delegating veHNT to a subDAO or veDNT staking decays at the same rates.
-
-| Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |     | Months staked or decayed to | veHNT held |
+| Months staked  | veHNT received |     | Months staked  | veHNT received |     | Months staked | veHNT received |     | Months staked  | veHNT received |
 | :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: | --- | :-------------------------: | :--------: |
-|              0              |    0.0     |     |                             |            |     |                             |            |     |                             |            |
-|              1              |    0.17    |     |             13              |    17.5    |     |             25              |    45.8    |     |             37              |    74.1    |
-|              2              |    0.33    |     |             14              |    19.9    |     |             26              |    48.1    |     |             38              |    76.4    |
-|              3              |    0.50    |     |             15              |    22.2    |     |             27              |    50.5    |     |             39              |    78.8    |
-|              4              |    0.67    |     |             16              |    24.6    |     |             28              |    52.9    |     |             40              |    81.1    |
-|              5              |    0.83    |     |             17              |    26.9    |     |             29              |    55.2    |     |             41              |    83.5    |
+|              1              |    N/A    |     |             13              |    17.5    |     |             25              |    45.8    |     |             37              |    74.1    |
+|              2              |    N/A    |     |             14              |    19.9    |     |             26              |    48.1    |     |             38              |    76.4    |
+|              3              |    N/A    |     |             15              |    22.2    |     |             27              |    50.5    |     |             39              |    78.8    |
+|              4              |    N/A    |     |             16              |    24.6    |     |             28              |    52.9    |     |             40              |    81.1    |
+|              5              |    N/A    |     |             17              |    26.9    |     |             29              |    55.2    |     |             41              |    83.5    |
 |              6              |    1.0     |     |             18              |    29.3    |     |             30              |    57.6    |     |             42              |    85.9    |
 |              7              |    3.4     |     |             19              |    31.6    |     |             31              |    59.9    |     |             43              |    88.2    |
 |              8              |    5.7     |     |             20              |    34.0    |     |             32              |    62.3    |     |             44              |    90.6    |
@@ -325,19 +316,53 @@ veHNT a stake has decayed. Delegating veHNT to a subDAO or veDNT staking decays 
 |             11              |    12.8    |     |             23              |    41.1    |     |             35              |    69.4    |     |             47              |    97.6    |
 |             12              |    15.1    |     |             24              |    43.4    |     |             36              |    71.7    |     |             48              |   100.0    |
 
-### Can I Increase My Staking Period At Any Time?
 
-Yes. You can increase your staking period to a maximum of 48 months at any time, and each stake
+### Do I Have to Delegate My veHNT to a subDAO?
+
+No. You can hold your veHNT as is or delegate to a subDAO at any time.
+
+:::note
+
+Once you delegate veHNT, you cannot immediately un-delegate. Instead, you must wait for the week long
+cooldown period to end.
+
+:::
+
+### How Granular Is The veHNT Linear Decrease?
+
+The veHNT decay countdown starts when initiated from the Wallet app/Realms, until then the veHNT in
+the wallet remains a constant.
+
+veHNT quantity decay is granulated per epoch, and the veHNT delegated to a subDAO decays at the same
+rate. The decay rate for each lock-up period is a constant and is even for every epoch.
+
+A 48-month lock-in period has approximately 70,176 linear steps between 100 veHNT and 0 veHNT.
+
+> 4 years x 365.25 days x 48 epochs per day = 70,176 steps
+
+After one epoch has passed after staking a single 1 HNT for 48 months, the quantity of veHNT in the
+wallet will decay from 100 veHNT to 99.998575 veHNT. This decrease will recur every 30 minutes over
+all the remaining 48 months until it hits zero.
+
+
+### Can I Increase My Staking Lock-up Period At Any Time?
+
+Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
 activates at the next epoch.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
 
-No. You define your staking period at the time of staking and cannot unstake for any reason.
+No. You define your lock-up period at the time of staking and cannot unstake or decrease the lock-up
+period for any reason.
 
 ### Can I Automate Re-Staking?
 
-This is being evaluated as the future default option for staking. However, this will not be
-available on day one of the Solana migration.
+Yes a constant rolling lock-up period will be the default option. The decay countdown start point will
+be a click to activate option.
+
+> Staking 100 HNT for 1 year will get approx 1510 veHNT and this will be a rolling 1 year period and will
+> remain at 1510 veHNT until the decay countdown is activated and this will then decrease linearly over
+> one year to 0 veHNT and the HNT is returned.
 
 ### Can I Transfer my veHNT or any of the veDNTs to Someone Else?
 
@@ -346,23 +371,21 @@ is not a token.
 
 ### How Do I Buy veHNT or Any of the veDNTs?
 
-You cannot buy veHNT or any of the other veDNTs. It is not a token. veHNT can only be obtained by
-staking HNT with a lock-up period. Likewise, you cannot buy veIOT or veMOBILE.
+You cannot buy veHNT or any of the other veDNTs. It is not a tradable token. veHNT can only be obtained 
+by staking HNT with a lock-up period. Likewise, you cannot buy veIOT or veMOBILE.
 
-veHNT and veDNT have no price in the larger crypto markets.
+veHNT and veDNTs have no price in the larger crypto markets.
 
 ### What Is the DAO Utility Score?
 
-The Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336).
+The DAO Utility score is described in [HIP-51](https://github.com/helium/HIP/issues/336)
 
-Each new sub-token of HNT has a Utility Score that mathematically represents the proportion shared
+Each new subDAO of HNT has a Utility Score that mathematically represents the proportion shared
 of HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. The
 higher the Utility Score, the more significant the ratio of HNT emitted to that subDAO's treasury
 per epoch.
 
-For example, a sub-token with a Utility Score of 100 would receive ⅔ of the emitted HNT in an epoch,
-assuming the other token had a score of less than 100. But would receive ⅓ if the other token had a
-score of 200. Delegating veHNT to IOT or MOBILE increases the `V` value in the
+Delegating veHNT to IOT or MOBILE increases the `V` value in the
 [HIP-51 DAO Utility Score](https://github.com/helium/HIP/blob/main/0051-helium-dao.md#omni-protocol-poc-incentive-model)
 calculation.
 
